<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".authorization.SignInActivity"
    android:background="@drawable/street_facade_of_the_long_house"
    android:backgroundTint="@color/back"
    android:backgroundTintMode="multiply">



    <ImageView
        android:id="@+id/imageViewSignInIconSmartHouse"
        android:layout_width="125dp"
        android:layout_height="125dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/textViewSmartHouse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/AppName"
        android:layout_marginTop="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewSignInIconSmartHouse"
        style="@style/app_title" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="180sp"
        android:layout_marginHorizontal="20sp"
        android:layout_marginTop="15sp"
        android:backgroundTint="@color/back_card"
        app:cardCornerRadius="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewSmartHouse">

        <EditText
            android:id="@+id/editTextSignInEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:layout_marginTop="30sp"
            android:ems="10"
            android:hint="@string/Email"
            style="@style/TextRegisterStyle"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/editTextSignInPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10sp"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="100sp"
            android:ems="10"
            android:hint="@string/Password"
            android:inputType="textPassword"
            style="@style/TextRegisterStyle" />
    </androidx.cardview.widget.CardView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignIn"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="60sp"
        android:layout_height="60sp"
        android:layout_marginTop="30dp"
        android:text="@string/EnterYourHouse"
        android:onClick="onClick"
        style="@style/TextRegisterStyle"
        android:backgroundTint="@color/app_red"
        android:background="@drawable/button_form"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonSignUp"
        android:layout_width="match_parent"
        android:layout_marginHorizontal="60sp"
        android:layout_height="60sp"
        android:layout_marginTop="30dp"
        android:text="@string/NewResident"
        android:onClick="onClick"
        style="@style/TextRegisterStyle"
        android:backgroundTint="@color/app_blue"
        android:background="@drawable/button_form"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSignIn" />
</androidx.constraintlayout.widget.ConstraintLayout>