<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".app.AddRoomActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewAddRoom"
        android:layout_width="match_parent"
        android:layout_height="120sp"
        android:backgroundTint="@color/app_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textViewAddRoom"
            style="@style/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/AddRoom" />

        <TextView
            android:id="@+id/textViewSave"
            style="@style/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|right"
            android:layout_marginRight="10sp"
            android:text="@string/Save"
            android:onClick="onClick"
            android:textSize="20sp"
            android:textStyle="normal" />

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="25sp"
            android:layout_height="25sp"
            android:layout_gravity="center|left"
            android:layout_marginLeft="10sp"
            android:backgroundTint="#0000"
            android:onClick="onClick"
            app:srcCompat="@drawable/icon_back" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textViewEnterRoomName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/EnterRoomName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardViewAddRoom"
        style="@style/AddRoomTextStyle" />

    <EditText
        android:id="@+id/editTextTextRoomName"
        android:layout_width="390sp"
        android:layout_height="40sp"
        android:layout_marginTop="24dp"
        android:background="@drawable/background_edittext"
        android:inputType="textCapSentences"
        android:paddingLeft="10sp"
        app:layout_constraintStart_toStartOf="@+id/textViewEnterRoomName"
        app:layout_constraintTop_toBottomOf="@+id/textViewEnterRoomName" />

    <TextView
        android:id="@+id/textViewSelectRoomIcon"
        style="@style/AddRoomTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/SelectRoomIcon"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextRoomName" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRooms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10sp"
        app:layout_constraintStart_toStartOf="@+id/textViewSelectRoomIcon"
        app:layout_constraintTop_toBottomOf="@+id/textViewSelectRoomIcon" />

</androidx.constraintlayout.widget.ConstraintLayout>