<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.LightFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textViewMainLights"
            style="@style/RoomTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/MainLights"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewUnderLineTitle"
            style="@style/RoomTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/Kitchen"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMainLights" />

        <TextView
            android:id="@+id/textViewNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewUnderLineTitle"
            style="@style/RoomNumber" />


        <TextView
            android:id="@+id/textViewUnderNumberTitle"
            style="@style/NearRoomTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lightstrength"
            app:layout_constraintEnd_toEndOf="@+id/textViewNumber"
            app:layout_constraintStart_toStartOf="@+id/textViewNumber"
            app:layout_constraintTop_toBottomOf="@+id/textViewNumber" />

        <TextView
            android:id="@+id/textViewNearNumberTitle"
            style="@style/NearRoomTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Lm"
            app:layout_constraintStart_toEndOf="@+id/textViewNumber"
            app:layout_constraintTop_toTopOf="@+id/textViewNumber" />

        <ImageView
            android:id="@+id/imageViewRoomLight"
            android:layout_width="370sp"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:src="@drawable/room_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewUnderNumberTitle" />

        <ImageButton
            android:id="@+id/imageButtonOnLight"
            android:layout_width="200sp"
            android:layout_height="200sp"
            android:layout_marginStart="-25dp"
            android:layout_marginTop="-20dp"
            android:backgroundTint="#0000"
            android:src="@drawable/button_on_light"
            app:layout_constraintStart_toEndOf="@+id/textViewNearNumberTitle"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>