<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ThermostatFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageViewTerm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="91dp"
            android:layout_marginTop="-80dp"
            android:src="@drawable/term_room"
            android:visibility="invisible"
            app:layout_constraintStart_toEndOf="@+id/textViewMainThermostat"
            app:layout_constraintTop_toBottomOf="@+id/switchThermostat" />

        <TextView
            android:id="@+id/textViewMainThermostat"
            style="@style/RoomTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:text="@string/Thermostat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textViewUnderLineTitle"
            style="@style/RoomTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text="@string/Kitchen"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewMainThermostat" />

        <Switch
            android:id="@+id/switchThermostat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:thumb="@drawable/switch_thumb"
            android:track="@drawable/switch_thumb_back"
            app:layout_constraintBottom_toBottomOf="@+id/textViewMainThermostat"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_turn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:visibility="invisible"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewUnderLineTitle">

            <TextView
                android:id="@+id/textViewCool"
                style="@style/NearRoomTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="50dp"
                android:text="Cool"
                app:layout_constraintBottom_toBottomOf="@+id/textViewHeating"
                app:layout_constraintStart_toEndOf="@+id/textViewHeating" />

            <TextView
                android:id="@+id/textViewHeating"
                style="@style/NearRoomTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Heating"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButtonHeating" />

            <TextView
                android:id="@+id/textViewFan"
                style="@style/NearRoomTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="80dp"
                android:text="@string/Fan"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButtonHeating" />

            <TextView
                android:id="@+id/textViewUnderDegree2"
                style="@style/NearRoomTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:text="°C"
                app:layout_constraintBottom_toBottomOf="@+id/textViewUnderDegree"
                app:layout_constraintStart_toEndOf="@+id/textViewUnderDegree" />

            <TextView
                android:id="@+id/textView"
                style="@style/RoomNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10sp"
                android:text="30"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewNearDegree"
                style="@style/NearRoomTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="°"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="@+id/textView" />

            <TextView
                android:id="@+id/textViewUnderDegree"
                style="@style/NearRoomTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:text="@string/Temperature"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <ImageButton
                android:id="@+id/imageButtonHeating"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_marginStart="-10dp"
                android:layout_marginTop="110dp"
                android:backgroundTint="#0000"
                android:src="@drawable/heating_button"
                app:layout_constraintStart_toStartOf="@+id/textViewUnderDegree"
                app:layout_constraintTop_toBottomOf="@+id/textViewUnderDegree" />

            <ImageButton
                android:id="@+id/imageButtonCool"
                android:layout_width="100sp"
                android:layout_height="100sp"
                android:layout_marginBottom="-12sp"
                android:backgroundTint="#0000"
                android:src="@drawable/cool_button_off"
                app:layout_constraintBottom_toBottomOf="@+id/imageButtonHeating"
                app:layout_constraintStart_toEndOf="@+id/imageButtonHeating" />

            <androidx.appcompat.widget.AppCompatSeekBar
                android:id="@+id/seekBarFan"
                android:layout_width="330dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="-5sp"
                android:layout_marginTop="10sp"
                android:progressDrawable="@drawable/seek_bar_progress_back"
                android:thumb="@drawable/seek_bar_thumb"
                android:splitTrack="false"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewFan" />

            <ImageView
                android:id="@+id/imageViewVent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="-10sp"
                android:src="@drawable/vent_icon"
                app:layout_constraintStart_toEndOf="@+id/seekBarFan"
                app:layout_constraintTop_toTopOf="@+id/seekBarFan" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>